--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5"
   },
